--- a/helm/values.staging.yaml
+++ b/helm/values.staging.yaml
@@ -54,13 +54,13 @@ service:
       protocol: TCP
 
 ingress:
-  enabled: false
+  enabled: true
   className: "nginx"
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: entrevista-frontend-bff.dev.justo.cloud
       paths:
         - path: /
           pathType: ImplementationSpecific
